// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows user to set chart subtitle 1`] = `
Array [
  Object {
    "payload": true,
    "type": "chartEditor/setQueryChange",
  },
  Object {
    "payload": Object {
      "card": Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "enabled": true,
        "hasShadow": true,
      },
      "legend": Object {
        "alignment": "left",
        "enabled": true,
        "layout": "horizontal",
        "position": "top",
      },
      "subtitle": Object {
        "content": "CHART_SUBTITLE",
      },
      "title": Object {
        "content": "",
      },
    },
    "type": "chartEditor/updateWidgetSettings",
  },
]
`;

exports[`allows user to set chart title 1`] = `
Array [
  Object {
    "payload": true,
    "type": "chartEditor/setQueryChange",
  },
  Object {
    "payload": Object {
      "card": Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "enabled": true,
        "hasShadow": true,
      },
      "legend": Object {
        "alignment": "left",
        "enabled": true,
        "layout": "horizontal",
        "position": "top",
      },
      "subtitle": Object {
        "content": "",
      },
      "title": Object {
        "content": "CHART_TITLE",
      },
    },
    "type": "chartEditor/updateWidgetSettings",
  },
]
`;
